--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -28,11 +28,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
-                        <div class="header__top__right">
+                        @* <div class="header__top__right">
                             <div class="header__top__right__auth">
                                 <a href="/Login"><i class="fa fa-user"></i> Login</a>
                             </div>
-                        </div>
+                        </div> *@
                     </div>
                 </div>
             </div>
@@ -51,12 +51,9 @@
                             <li><a href="./Products">Products</a></li>
                             <li><a href="./Services">Services</a></li>
                             <li>
-                                <a href="#">Pages</a>
-                                <ul class="header__menu__dropdown">
-                                    <li><a href="./ShopCart">Shoping Cart</a></li>
-                                    <li><a href="./Checkout">Check Out</a></li>
-                                    <li><a href="./ServiceView">Service View</a></li>
-                                </ul>
+                                <div class="">
+                                    <a href="/Login"><i class=""></i> Login</a>
+                                </div>
                             </li>
                         </ul>
                     </nav>
