--- a/Pages/ProductView.cshtml
+++ b/Pages/ProductView.cshtml
@@ -40,23 +40,24 @@
                     <h4 class="title text-dark">
                         @Model.Name
                     </h4>
-                    <div class="d-flex flex-row my-3">
-                        <div class="text-warning mb-1 me-2">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                            <span class="ms-1">
-                                4.5
-                            </span>
+                   
+                        <div class="d-flex flex-row my-3">
+                            <div class="text-warning mb-1 me-2">
+                                <i class="fa fa-star"></i>
+                             
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="ms-1">
+                                    @Model.Rating
+                                </span>
+                            </div>
+
+                            <span class="text-success ms-2"> In stock</span>
                         </div>
-                        <span class="text-muted"><i class="fas fa-shopping-basket fa-sm mx-1"></i>154 orders</span>
-                        <span class="text-success ms-2"> In stock</span>
+
                     </div>
 
                     <div class="mb-3">
-                        <span class="h5">@Model.Category</span>
+                        <span class="h5">@Model.Price</span>
                     </div>
 
                     <p>
@@ -66,7 +67,6 @@
                     <div class="row">
                         <dt class="col-3">Released by:</dt>
                         <dd class="col-9">@Model.FreelancerName</dd>
-                       
                     </div>
 
                     <hr />
