--- a/Pages/Services.cshtml
+++ b/Pages/Services.cshtml
@@ -28,12 +28,12 @@
     <div class="row featured__filter">
         <div class="col-lg-3 col-md-4 col-sm-6 mix antique">
             <div class="featured__item">
-                    <div class="featured__item__pic set-bg" data-setbg="img/product/product-7.jpg">
-                    <ul class="featured__item__pic__hover">
+                    <div class="featured_item_pic set-bg" data-setbg="img/product/product-7.jpg">
+                    <ul class="featured_itempic_hover">
                         <li><a href="ShopCart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                 </div>
-                <div class="featured__item__text">
+                <div class="featured_item_text">
                         <h6><a href="ProductView">Antique</a></h6>
                     <h5>$30.00</h5>
                 </div>
@@ -42,12 +42,12 @@
 
         <div class="col-lg-3 col-md-4 col-sm-6 mix painting">
             <div class="featured__item">
-                <div class="featured__item__pic set-bg" data-setbg="img/product/product-8.jpg">
-                    <ul class="featured__item__pic__hover">
+                <div class="featured_item_pic set-bg" data-setbg="img/product/product-8.jpg">
+                    <ul class="featured_itempic_hover">
                         <li><a href="ShopCart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                 </div>
-                <div class="featured__item__text">
+                <div class="featured_item_text">
                         <h6><a href="ProductView">Painting</a></h6>
                     <h5>$30.00</h5>
                 </div>
@@ -56,12 +56,12 @@
 
         <div class="col-lg-3 col-md-4 col-sm-6 mix graphic-design">
             <div class="featured__item">
-                <div class="featured__item__pic set-bg" data-setbg="img/product/product-9.jpg">
-                    <ul class="featured__item__pic__hover">
+                <div class="featured_item_pic set-bg" data-setbg="img/product/product-9.jpg">
+                    <ul class="featured_itempic_hover">
                         <li><a href="ShopCart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                 </div>
-                <div class="featured__item__text">
+                <div class="featured_item_text">
                         <h6><a href="ProductView">Graphic Design</a></h6>
                     <h5>$30.00</h5>
                 </div>
@@ -70,12 +70,12 @@
 
         <div class="col-lg-3 col-md-4 col-sm-6 mix photography">
             <div class="featured__item">
-                <div class="featured__item__pic set-bg" data-setbg="img/product/product-10.jpg">
-                    <ul class="featured__item__pic__hover">
+                <div class="featured_item_pic set-bg" data-setbg="img/product/product-10.jpg">
+                    <ul class="featured_itempic_hover">
                         <li><a href="ShopCart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                 </div>
-                <div class="featured__item__text">
+                <div class="featured_item_text">
                         <h6><a href="ProductView">Photography</a></h6>
                     <h5>$30.00</h5>
                 </div>
@@ -84,12 +84,12 @@
 
         <div class="col-lg-3 col-md-4 col-sm-6 mix fashion-design">
             <div class="featured__item">
-                <div class="featured__item__pic set-bg" data-setbg="img/product/product-11.jpg">
-                    <ul class="featured__item__pic__hover">
+                <div class="featured_item_pic set-bg" data-setbg="img/product/product-11.jpg">
+                    <ul class="featured_itempic_hover">
                         <li><a href="ShopCart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                 </div>
-                <div class="featured__item__text">
+                <div class="featured_item_text">
                         <h6><a href="ProductView">Fashion Design</a></h6>
                     <h5>$30.00</h5>
                 </div>
@@ -98,12 +98,12 @@
 
         <div class="col-lg-3 col-md-4 col-sm-6 mix mechanical">
             <div class="featured__item">
-                <div class="featured__item__pic set-bg" data-setbg="img/product/product-12.jpg">
-                    <ul class="featured__item__pic__hover">
+                <div class="featured_item_pic set-bg" data-setbg="img/product/product-12.jpg">
+                    <ul class="featured_itempic_hover">
                         <li><a href="ShopCart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                 </div>
-                <div class="featured__item__text">
+                <div class="featured_item_text">
                         <h6><a href="ProductView">Mechanical</a></h6>
                     <h5>$30.00</h5>
                 </div>
@@ -112,12 +112,12 @@
 
         <div class="col-lg-3 col-md-4 col-sm-6 mix carpentry">
             <div class="featured__item">
-                <div class="featured__item__pic set-bg" data-setbg="img/product/product-13.jpg">
-                    <ul class="featured__item__pic__hover">>
+                <div class="featured_item_pic set-bg" data-setbg="img/product/product-13.jpg">
+                    <ul class="featured_itempic_hover">>
                         <li><a href="ShopCart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                 </div>
-                <div class="featured__item__text">
+                <div class="featured_item_text">
                         <h6><a href="ProductView">Carpentry</a></h6>
                     <h5>$30.00</h5>
                 </div>
@@ -155,12 +155,12 @@
             {
                 <div class="col-lg-3 col-md-4 col-sm-6 mix @Service.Category">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="data:image;base64,@Convert.ToBase64String(Service.ImageData)">
-                            <ul class="featured__item__pic__hover">
+                        <div class="featured_item_pic set-bg" data-setbg="data:image;base64,@Convert.ToBase64String(Service.ImageData)">
+                            <ul class="featured_itempic_hover">
                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                             </ul>
                         </div>
-                        <div class="featured__item__text">
+                        <div class="featured_item_text">
                             <h6><a href="/ProductView?ServiceID=@Service.serviceID">@Service.Name</a></h6>
                             <h5>@Service.Price</h5>
                         </div>
