--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -49,7 +49,7 @@
                         <span>JOPERA</span>
                         <h2>Artwork <br />100% Creative</h2>
                         <p>Seamlessly Sell or Find Unique Handmade Treasures</p>
-                        <a href="#" class="primary-btn">SHOP NOW</a>
+                        <a href="~/Products" class="primary-btn">SHOP NOW</a>
                     </div>
                 </div>
             </div>
