--- a/Pages/ChangePass.cshtml
+++ b/Pages/ChangePass.cshtml
@@ -65,8 +65,8 @@
         margin: auto;
         display: block;
         color: #fff;
-        background-color: #065492;
-        border-color: #065492;
+        background-color: #28a745;
+        border-color: #28a745;
         text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
         box-shadow: 0 2px 0 rgba(0, 0, 0, 0.035);
         border-radius: 4px;
