--- a/Pages/Services.cshtml
+++ b/Pages/Services.cshtml
@@ -149,8 +149,28 @@
                     </ul>
                 </div>
             </div>
+        </div><div class="row featured__filter" id="productList">
+            @foreach (var Service in Model.Services)
+            {
+                <div class="col-lg-3 col-md-4 col-sm-6 mix @Service.Category">
+                    <div class="featured__item">
+                        <div class="featured__item__pic set-bg" data-setbg="data:image;base64,@Convert.ToBase64String(Service.ImageData)">
+                            @*  <ul class="featured__item__pic__hover">
+                        <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                        </ul> *@
+                        </div>
+                        <div class="featured__item__text">
+                            <h6><a href="/ServiceView?ServiceID=@Service.serviceID">@Service.Name</a></h6>
+                            <h5>@Service.Price</h5>
+                        </div>
+                    </div>
+                </div>
+
+            }
         </div>
-        <div class="row featured__filter" id="productList">
+    </div>
+</section>
+        @* <div class="row featured__filter" id="productList">
             @foreach (var Service in Model.Services)
             {
                 <div class="col-lg-3 col-md-4 col-sm-6 mix @Service.Category">
@@ -161,12 +181,12 @@
                             </ul>
                         </div>
                         <div class="featured_item_text">
-                            <h6><a href="/ProductView?ServiceID=@Service.serviceID">@Service.Name</a></h6>
+                            <h6> <a href="/ServiceView?ServiceID=@Service.serviceID"> @Service.Name </a>  </h6> 
                             <h5>@Service.Price</h5>
-                        </div>
+                        </div> 
                     </div>
                 </div>
             }
         </div>
     </div>
-</section>
+</section> *@
