freelancer profile view (not working)

--- a/Pages/ProductView.cshtml
+++ b/Pages/ProductView.cshtml
@@ -92,7 +92,7 @@
 
                     <div class="row">
                         <dt class="col-3">Released by:</dt>
-                        <dd class="col-9">@Model.FreelancerName</dd>
+                    <dd class="col-9"><a href="/FreelancerProfile">@Model.FreelancerName</a></dd>
                     </div>
 
                     <hr />
