--- a/Pages/Products.cshtml
+++ b/Pages/Products.cshtml
@@ -137,7 +137,7 @@
                             </ul> *@
                         </div> 
                         <div class="featured__item__text">
-                            <h6><a href="/ProductView?ProductID=@product.ProductID">@product.Name</a></h6>
+                            <h6><a href="/ProductView?ProductID=@product.ProductID&FreelancerID=@product.FreelancerID">@product.Name</a></h6>
                             <h5>@product.Price</h5>
                         </div>
                     </div>
