--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -62,7 +62,14 @@
                     <div class="header__cart">
                         <ul>
                             @*<li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>*@
-                            <li><a href="./UserInfo"><i class="fa fa-user"></i></a></li>
+                            @if (Model.userId == 0 || Model.userId == null)
+                            {
+
+                            }
+                            else
+                            {
+                                <li><a href="./UserInfo"><i class="fa fa-user"></i></a></li>
+                            }
                             <li><a href="./ShopCart"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
                         </ul>
                         <div class="header__cart__price"><span></span></div>
